--- a/framework/styles/latex-style.css
+++ b/framework/styles/latex-style.css
@@ -22,8 +22,6 @@ ul {
 h1
 {
     margin-top: 0px;
-    margin-left: -30px;
-    margin-right: -30px;
     margin-bottom: 35px;
     font-size: 120%;
     text-align: left;
@@ -49,8 +47,6 @@ h1
 
 .slide
 {
-    padding-left: 30px;
-    padding-right: 30px;
     -moz-box-shadow: 0px 3px 10px #fff;
     box-shadow: 0px 3px 10px #fff;
     background: -moz-linear-gradient(bottom, #bbd, #fff);
@@ -80,8 +76,6 @@ h1
 {
     position: absolute;
     bottom: 0px;
-    margin-left: -30px;
-    margin-right: -30px;
     width: 100%;
     -moz-box-shadow: 0px 3px 10px #000;
     box-shadow: 0px 3px 10px #000;
